test github action

--- a/.github/workflows/hi-alex.yml
+++ b/.github/workflows/hi-alex.yml
@@ -16,3 +16,4 @@ jobs:
           to: bnseekfordysu@gmail.com,john.tomko1@gmail.com
           from: John Tomko
           body: lmao
+      - run: echo "lmao"
